# shotsight2.0

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: app.example.yaml
doc/: architecture.md  detailed-design.md  handoff.md  prompt.md  proposal.md  sam3-temporal-benchmark.md
doc/reports/: architecture-deviations.md  blocked.md  decision-log.md  requirements-traceability.md  test-report.md
doc/tasks/: analysis-job.md  analysis-pipeline.md  application-api.md  artifact-rendering.md  artifact-store.md  calibration.md  camera-segment.md  court-mapping.md  deletion.md  media-processing.md  outcome-classification.md  persistence.md  presentation.md  progress.md  review.md  shot-lifecycle.md  statistics.md  track-association.md  tracking-backend-selection.md  tracking.md  video-ingestion.md  video-library.md  worker-queue.md
migrations/: 001_initial.sql  002_diagnostics.sql  003_worker_queue.sql  004_video_source_metadata.sql  005_tracking_observations.sql
requirements/: dev.txt  sam3.txt
scripts/: annotate_shots.py  bootstrap.ps1  bootstrap.sh  docker-smoke.sh  evaluate_outcome_classification.py  evaluate_shot_lifecycle.py  evaluate_tracking.py  match_shot_predictions.py  run-mlx.sh  run-native.sh  run.ps1  run.sh  setup-mlx.sh
src/shotsight2/: __init__.py  config.py  main.py
tests/: __init__.py  test_app_runtime.py  test_health.py  test_tracking_backend_selection.py
tests/analysis_job/: __init__.py  test_analysis_job_service.py
tests/calibration/: __init__.py  (+1 more)
worktrees/: README.md
(+159 files in other folders)
