[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "shotsight2"
version = "0.1.0"
description = "Local-first basketball shot analysis application"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "python-multipart>=0.0.20,<1",
  "pydantic-settings>=2.8,<3",
]

[project.scripts]
shotsight-worker = "shotsight2.worker.cli:main"

[project.optional-dependencies]
vision = [
  "numpy>=2.1,<3",
  "opencv-python-headless>=4.11,<5",
  "pillow>=11,<12",
]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/shotsight2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["shotsight2"]
